| Summary: | ASTERISK-29752: app: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2021-11-17 02:36:03.000-0600 | Date Closed: | 2021-11-18 13:15:06.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Applications/General Documentation |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following appears in the file {{doxygen.log}}:
{code} main/app.c:1478: warning: unable to resolve reference to 'AST_FORMAT_SLINEAR' for \ref command main/app.c:1478: warning: unable to resolve reference to 'AST_FORMAT_SLINEAR' for \ref command main/app.c:1521: warning: The following parameter of __ast_play_and_record(struct ast_channel *chan, const char *playfile, const char *recordfile, int maxtime, const char *fmt, int *duration, int *sound_duration, int beep, int silencethreshold, int maxsilence, const char *path, int prepend, const char *acceptdtmf, const char *canceldtmf, int skip_confirmation_sound, enum ast_record_if_exists if_exists) is not documented: parameter 'if_exists' main/app.c:937: warning: documented empty return type of ast_dtmf_stream_external include/asterisk/app.h:677: warning: argument 'The' of command @param is not found in the argument list of ast_vm_greeter_unregister(const char *module_name) main/app.c:602: warning: The following parameter of ast_vm_greeter_unregister(const char *module_name) is not documented: parameter 'module_name' main/app.c:602: warning: documented empty return type of ast_vm_greeter_unregister include/asterisk/app.h:774: warning: argument 'the' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) include/asterisk/app.h:774: warning: argument 'the' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) include/asterisk/app.h:774: warning: argument 'OPTIONAL.' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) include/asterisk/app.h:774: warning: argument 'list' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) include/asterisk/app.h:774: warning: argument 'When' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) main/app.c:752: warning: The following parameter of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) is not documented: parameter 'sort_val' include/asterisk/app.h:610: warning: argument 'The' of command @param is not found in the argument list of ast_vm_unregister(const char *module_name) main/app.c:491: warning: The following parameter of ast_vm_unregister(const char *module_name) is not documented: parameter 'module_name' main/app.c:491: warning: documented empty return type of ast_vm_unregister main/app.c:1429: warning: unable to resolve reference to 'AST_FORMAT_SLINEAR' for \ref command main/app.c:1478: warning: unable to resolve reference to 'AST_FORMAT_SLINEAR' for \ref command include/asterisk/app.h:354: warning: Found unknown command '@context' include/asterisk/app.h:383: warning: Found unknown command '@context' include/asterisk/app.h:366: warning: Found unknown command '@context' include/asterisk/app.h:447: warning: Found unknown command '@context' include/asterisk/app.h:448: warning: Found unknown command '@context' include/asterisk/app.h:138: warning: argument 'c' from the argument list of ast_app_getdata has multiple @param documentation sections include/asterisk/app.h:138: warning: argument 'prompt' from the argument list of ast_app_getdata has multiple @param documentation sections include/asterisk/app.h:138: warning: argument 's' from the argument list of ast_app_getdata has multiple @param documentation sections include/asterisk/app.h:138: warning: argument 'maxlen' from the argument list of ast_app_getdata has multiple @param documentation sections include/asterisk/app.h:138: warning: argument 'timeout' from the argument list of ast_app_getdata has multiple @param documentation sections include/asterisk/app.h:155: warning: argument 'c' from the argument list of ast_app_getdata_terminator has multiple @param documentation sections include/asterisk/app.h:155: warning: argument 'prompt' from the argument list of ast_app_getdata_terminator has multiple @param documentation sections include/asterisk/app.h:155: warning: argument 's' from the argument list of ast_app_getdata_terminator has multiple @param documentation sections include/asterisk/app.h:155: warning: argument 'maxlen' from the argument list of ast_app_getdata_terminator has multiple @param documentation sections include/asterisk/app.h:155: warning: argument 'timeout' from the argument list of ast_app_getdata_terminator has multiple @param documentation sections include/asterisk/app.h:155: warning: argument 'terminator' from the argument list of ast_app_getdata_terminator has multiple @param documentation sections include/asterisk/app.h:986: warning: documented empty return type of ast_dtmf_stream_external include/asterisk/app.h:677: warning: argument 'The' of command @param is not found in the argument list of ast_vm_greeter_unregister(const char *module_name) include/asterisk/app.h:684: warning: The following parameter of ast_vm_greeter_unregister(const char *module_name) is not documented: parameter 'module_name' include/asterisk/app.h:684: warning: documented empty return type of ast_vm_greeter_unregister include/asterisk/app.h:774: warning: argument 'the' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) include/asterisk/app.h:774: warning: argument 'the' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) include/asterisk/app.h:774: warning: argument 'OPTIONAL.' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) include/asterisk/app.h:774: warning: argument 'list' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) include/asterisk/app.h:774: warning: argument 'When' of command @param is not found in the argument list of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) include/asterisk/app.h:785: warning: The following parameter of ast_vm_mailbox_snapshot_create(const char *mailbox, const char *context, const char *folder, int descending, enum ast_vm_snapshot_sort_val sort_val, int combine_INBOX_and_OLD) is not documented: parameter 'sort_val' include/asterisk/app.h:610: warning: argument 'The' of command @param is not found in the argument list of ast_vm_unregister(const char *module_name) include/asterisk/app.h:614: warning: The following parameter of ast_vm_unregister(const char *module_name) is not documented: parameter 'module_name' include/asterisk/app.h:614: warning: documented empty return type of ast_vm_unregister {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-17 02:36:05.680-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-18 13:15:07.022-0600 Change 17522 merged by Friendly Automation: app: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17522|https://gerrit.asterisk.org/c/asterisk/+/17522] By: Friendly Automation (friendly-automation) 2021-11-18 14:45:21.179-0600 Change 17521 merged by Kevin Harwell: app: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17521|https://gerrit.asterisk.org/c/asterisk/+/17521] By: Friendly Automation (friendly-automation) 2021-11-18 14:45:46.157-0600 Change 17503 merged by Kevin Harwell: app: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17503|https://gerrit.asterisk.org/c/asterisk/+/17503] By: Friendly Automation (friendly-automation) 2021-11-18 14:45:59.347-0600 Change 17523 merged by Kevin Harwell: app: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17523|https://gerrit.asterisk.org/c/asterisk/+/17523] | ||