app: Fix for Doxygen.

ASTERISK-29752

Change-Id: If40cbd01d47a6cfd620b18206dedb8460216c8af